# YAPWR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  out
analysis/: checkBinMigration.ipynb  playground.ipynb
configs/: default.yaml  test_Mh.yaml  test_Mh_high.yaml  test_Mh_low.yaml  test_Mh_medium.yaml
include/: AsymmetryHandler.h  Config.h  ConfigFile.h  Constants.h  Error.h  Logger.h  ModuleProcessor.h  ModuleProcessorFactory.h  Result.h  Synthesizer.h  Utility.h
runcards/: runcard.yaml
scripts/: run_project.rb
scripts/modules/: module___asymmetry.rb  module___asymmetryInject.rb  module___asymmetry_sideband.rb  module___baryonContamination.rb  module___binMigration.rb  module___filterTree.rb  module___kinematicBins.rb  module___particleMisidentification.rb  module___purityBinning.rb  module_runner.rb
src/: AsymmetryHandler.cpp  Config.cpp  ConfigFile.cpp  ModuleProcessorFactory.cpp  Synthesizer.cpp  asymmetry.C  baryonContamination.C  binMigration.C  filterTree.C  kinematicBins.C  main.cpp  particleMisidentification.C  purityBinning.C
src/errors/: BaryonContaminationError.cpp  BaryonContaminationError.h  BinMigrationError.cpp  BinMigrationError.h  NormalizationError.cpp  NormalizationError.h  ParticleMisidentificationError.cpp  ParticleMisidentificationError.h  PurityBinningError.cpp  PurityBinningError.h  SidebandRegionError.cpp  SidebandRegionError.h
src/modules/: TreeManager.C  asymmetry.C  baryonContamination.C  binMigration.C  filterTree.C  filterTreeMC.C  injectAsymmetry.C  kinematicBins.C  particleMisidentification.C  purityBinning.C
(+16 files in other folders)
